# nerd-fonts.rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  generate-nerd-fonts-yaml.sh
resources/: nerd-fonts-generated.yaml
src/: lib.rs
