[package]
name = "nerd_fonts"
version = "0.1.5"
authors = ["Yue Yang <g1enyy0ung@gmail.com>"]
edition = "2018"
description = "Nerd Fonts in rust."
documentation = "https://docs.rs/nerd_fonts"
homepage = "https://github.com/g1eny0ung/nerd-fonts.rs"
repository = "https://github.com/g1eny0ung/nerd-fonts.rs"
readme = "README.md"
license = "MIT"
exclude = [
  ".vscode/*",
  "bin/*"
]

[dependencies]
yaml-rust = "0.4"

[lib]
doctest = false
